# rvl-rust

./: Cargo.toml  README.md  build.rs
src/: codec.rs  error.rs  lib.rs  rvl.rs  trvl.rs
src/io/: mod.rs  reference_dataset.rs
tests/: live_realsense.rs  roundtrip_recorded.rs
