[package]
name = "rvl"
version = "0.1.0"
edition = "2024"
description = "Rust RVL and TRVL depth frame codecs"
license = "Apache-2.0"
keywords = ["depth", "codec", "compression", "rvl", "realsense"]
categories = ["compression", "encoding"]

[features]
default = []
realsense = ["dep:realsense-rust"]

[dependencies]
realsense-rust = { version = "1.3.0", optional = true }
